Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
   
   <div class="article">
-    <h2><a href="http://tpapp.github.io/post/julia-post.html">Julia markdown test</a></h2>
+    <h2><a href="http://tpapp.github.io/post/julia-post.html">Julia &#43; Weave.jl &#43; hugo test</a></h2>
     <div class="article-meta">
       <span class="posttime">2017/03/03</span>
       
