Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
   
   <div class="article">
-    <h2><a href="http://tpapp.github.io/post/teaching-a-course.html">Teaching a course using Julia</a></h2>
+    <h2><a href="http://tpapp.github.io/post/teaching-a-course/">Teaching a course using Julia</a></h2>
     <div class="article-meta">
       <span class="posttime">2017/03/24</span>
       
