Publishing to gh-pages.

--- a/404.html
+++ b/404.html
@@ -102,7 +102,7 @@
             <span>Powered by <a href="https://gohugo.io/">Hugo</a>.</span>
             <span>
               
-              Copyright 2017, Tamás K. Papp. <a href="https://creativecommons.org/licenses/by-nd/4.0/legalcode">CC-BY-SA</a>.
+              Copyright 2017, Tamás K. Papp. <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">CC-BY-SA</a>.
               
             </span>
           </div>
