Publishing to gh-pages.

--- a/research/index.html
+++ b/research/index.html
@@ -54,6 +54,8 @@
   
   <a href="../tags/economics">economics</a>
   
+  <a href="../tags/emacs-emacs25-ubuntu">emacs-emacs25-ubuntu</a>
+  
   <a href="../tags/firefox">firefox</a>
   
   <a href="../tags/hugo">hugo</a>
