--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 
 </div>
     </div>
+    <div id="smallscreenwarning">
+      site not optimized for small screens
+    </div>
   </body>
 </html>
 
