--- a/research/index.html
+++ b/research/index.html
@@ -104,6 +104,9 @@
 </div>
 
     </div>
+    <div id="smallscreenwarning">
+      site not optimized for small screens
+    </div>
   </body>
 </html>
 
