Publishing to gh-pages.

--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
     </div>
     <div id="mainbody">
 
-<div id="sidebar">
-  <img id="tamaskpapp" src="./img/tamas_k_papp.jpg" alt="Tamás K. Papp">
-</div>
 <div id="content">
   
 
 <h1 id="tamás-k-papp">Tamás K. Papp</h1>
 
-<p>Researcher at the <a href="http://www.ihs.ac.at/research-groups/macroeconomics-and-public-finance/">Institute for Advanced Studies, Vienna</a>.</p>
+<p><img id="tamaskpapp" src="./img/tamas_k_papp.jpg" alt="Tamás K. Papp"></p>
+
+<p>Researcher at the <a href="http://www.ihs.ac.at/research-groups/macroeconomics-and-public-finance/">Institute for Advanced Studies,
+Vienna</a>.</p>
 
 <h2 id="contact">Contact</h2>
 
@@ -212,7 +212,7 @@
 </div>
     </div>
     <div id="smallscreenwarning">
-      site not optimized for small screens
+      site not optimized for small screens, math will break
     </div>
   </body>
 </html>
