--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Vienna</a>.</p>
 </div>
     </div>
     <div id="smallscreenwarning">
-      site not optimized for small screens, math will break
+      site not optimized for small screens, math may break
     </div>
   </body>
 </html>
