--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@ Vienna</a>.</p>
 <li>Github (issues, PRs): <a href="https://github.com/tpapp">https://github.com/tpapp</a></li>
 </ul>
 
+<h2 id="cv">CV</h2>
+
+<p><a href="/pdf/cv.pdf">Curriculum Vitae (PDF)</a></p>
+
 <h2 id="employment">Employment</h2>
 
 <ul>
