Publishing to gh-pages.

--- a/index.html
+++ b/index.html
@@ -176,11 +176,10 @@ Vienna</a>.</p>
 <ul>
 <li>E-mail: <a href="mailto:tkpapp@gmail.com">tkpapp@gmail.com</a></li>
 <li>Github (issues, PRs): <a href="https://github.com/tpapp">https://github.com/tpapp</a></li>
+<li>Julia Discourse forum: <a href="https://discourse.julialang.org/u/Tamas_Papp/">@Tamas_Papp</a></li>
 </ul>
 
-<h2 id="cv">CV</h2>
-
-<p><a href="/pdf/cv.pdf">Curriculum Vitae (PDF)</a></p>
+<h2 id="curriculum-vitae-pdf-cv-pdf-pdf"><a href="/pdf/cv.pdf">Curriculum Vitae</a> (PDF)</h2>
 
 <h2 id="employment">Employment</h2>
 
