Publishing to gh-pages.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     
   </div>
 </div>
-<a href="https://tpapp.github.io/index.xml" type="application/rss+xml" target="_blank"><img class="feedicon" src="https://tpapp.github.io/img/feed-icon.svg" alt="Atom feed"></a>
+<a href="https://tpapp.github.io/index.xml" type="application/rss+xml" target="_blank"><img class="feedicon" src="https://tpapp.github.io/img/feed-icon.svg" alt="Atom feed (whole site)" title="Atom feed (whole site)"></a>
 
     </nav>
     <div id="navbarplaceholder">
@@ -156,7 +156,7 @@
     
   </div>
 </div>
-<a href="https://tpapp.github.io/index.xml" type="application/rss+xml" target="_blank"><img class="feedicon" src="https://tpapp.github.io/img/feed-icon.svg" alt="Atom feed"></a>
+<a href="https://tpapp.github.io/index.xml" type="application/rss+xml" target="_blank"><img class="feedicon" src="https://tpapp.github.io/img/feed-icon.svg" alt="Atom feed (whole site)" title="Atom feed (whole site)"></a>
 
     </div>
     <div id="mainbody">
@@ -179,7 +179,7 @@ Vienna</a>.</p>
 <li>Julia Discourse forum: <a href="https://discourse.julialang.org/u/Tamas_Papp/">@Tamas_Papp</a></li>
 </ul>
 
-<h2 id="curriculum-vitae-pdf-cv-pdf-pdf"><a href="/pdf/cv.pdf">Curriculum Vitae</a> (PDF)</h2>
+<h2 id="curriculum-vitae-pdf-pdf-cv-pdf">Curriculum Vitae (<a href="/pdf/cv.pdf">PDF</a>)</h2>
 
 <h2 id="employment">Employment</h2>
 
