--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Vienna</a>.</p>
 
 <h2 id="software">Software</h2>
 
-<p>All of the software I made public is available on <a href="https://github.com/tpapp/">Github</a> under some open-source license, usually MIT. <a href="https://github.com/tpapp?utf8=%E2%9C%93&amp;tab=repositories&amp;q=&amp;type=&amp;language=julia">Most of my recent libraries</a> are in <a href="https://julialang.org/">Julia</a>. See <a href="">this post</a> about my Common Lisp libraries.</p>
+<p>All of the software I made public is available on <a href="https://github.com/tpapp/">Github</a> under some open-source license, usually MIT. <a href="https://github.com/tpapp?utf8=%E2%9C%93&amp;tab=repositories&amp;q=&amp;type=&amp;language=julia">Most of my recent libraries</a> are in <a href="https://julialang.org/">Julia</a>. See <a href="/post/orphaned-lisp-libraries/">this post</a> about my Common Lisp libraries.</p>
 
 <p>You can find the source for this site <a href="https://github.com/tpapp/tpapp.github.io-source">on Github</a>. Unless indicated otherwise, <em>code snippets displayed directly in blog posts are in the public domain</em>.</p>
 
