Publishing to gh-pages.

--- a/research/index.html
+++ b/research/index.html
@@ -10,7 +10,7 @@
     
     <link href="/research/index.xml" rel="alternate" type="application/rss+xml" title="Tamás K. Papp&#39;s website" />
     
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600%7CUbuntu+Mono&amp;subset=greek,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Ubuntu+Mono&display=swap&subset=greek,latin-ext" rel="stylesheet">
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
